--- a/pull-sheet/index.html
+++ b/pull-sheet/index.html
@@ -15,7 +15,7 @@ title: Update Spreadsheet
 
     // dict of all published sheets and corresponding resource names
     var $resources = {
-        team: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vR9Bopp7wygWjBmMaN8_hc4tytmtRc88Dehu1W9B-pjetK_LRcTahB7tRpSPY-tKeAK5w93TC-DKElE/pub?gid=253503174&single=true&output=tsv'
+        team: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vR83gxfEWUYH6dHoqJIBLIYfv58Mcese9Ij4YXD0k8vvdrDD_KjqreAslX-73laIF-0pEca2v4ndr_q/pub?output=tsv'
     }
 
     var header_maps = {
